# flask-microblog

./: .gitignore  README.md  config.py  pyproject.toml  tests.py
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: 500.html  _post.html  base.html  edit_profile.html  index.html  login.html  register.html  user.html
migrations/versions/: 51d3d0721ac2_users_table.py  626a689410db_new_fields_in_user_model.py  9ea6fa8823fb_posts_table.py  aa4af370fd60_followers.py
