[tool.poetry]
name = "microblog"
version = "0.1.0"
description = ""
authors = ["Cattleya <19617370+ctantri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
