[tool.poetry]
name = "microblog"
version = "0.1.0"
description = ""
authors = ["Cattleya <19617370+ctantri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"
Flask-WTF = "^1.0.1"
flask-sqlalchemy = "^3.0.2"
Flask-Migrate = "^3.1.0"
Flask-Login = "^0.6.2"
email-validator = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
